--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
-body {
-  /*background: url('img/world-map-canvas.jpg');*/
-  /*background-size: cover;
-  background-repeat: no-repeat;*/
+/*body {
   width: 100%;
   height: 100%;
-}
+  background-color: #d3c2b2;
+}*/
 
 /*.container {
   position: relative;
@@ -13,11 +11,13 @@ body {
 }*/
 
 .masthead {
-  border: 2px solid black;
+  border: 4px dotted black;
+  border-radius: 25px;
   background: rgba(0,0,0,0.3);
-  font-family: fantasy;
+  font-family: verdana;
+  color: white;
   padding: 10px;
-  width: 500px;
+  width: 600px;
   /*position: relative;*/
   margin: auto;
   margin-bottom: 10px;
@@ -25,19 +25,46 @@ body {
   text-align: center;
 }
 
-h1 {
-
+.container {
+  width: 1700px;
+  height: 900px;
 }
 
 .worldMap {
+  background: url('img/world-map-canvas.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   /*position: relative;*/
-  margin: 10px;
+  /*border: 4px dotted black;*/
+  /*margin: 50px;
+  margin-top: 10px;
   margin-right: 30px;
   display: block;
-  padding: 0;
-}
-
-.map {
+  padding: 0;*/
   width: 100%;
   height: 100%;
 }
+
+/*.map {
+  width: 100%;
+  height: 100%;
+}*/
+
+.wallaby {
+  /*display: block;*/
+  position: absolute;
+  max-width: 10%;
+  max-height: 100%;
+  left: 1300px;
+  top: 550px;
+}
+
+/*.lemur {
+  content: "";
+  background: url('img/lemur.jpg');
+  background-repeat: no-repeat;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}*/
